updated our values

--- a/about.html
+++ b/about.html
@@ -97,30 +97,30 @@
       <div class="values-modern-container">
         <h2>Our Values</h2>
         <div class="values-grid">
+          <div class="value-card integrity">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"/></svg></div>
+            <h3>Do the Right Thing</h3>
+            <p>We act with integrity, fairness, and responsibility-even when it is inconvenient.</p>
+          </div>
           <div class="value-card innovation">
             <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.87-3.13-7-7-7zm5.33 16.81L19 20.75C18.24 21.5 17.2 22 16 22H8c-1.2 0-2.24-.5-3-1.25l1.67-1.94c.53.5 1.25.81 2.04.81h6.58c.79 0 1.51-.31 2.04-.81z"/></svg></div>
-            <h3>Innovation</h3>
-            <p>Continuous improvement in product and service delivery</p>
-          </div>
-          <div class="value-card sustainability">
-            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M17 8C8 10 5.9 16.17 3.82 21.34l1.89.66l.95-2.3c.48.17.98.3 1.34.3C19 20 22 3 22 3c-1 2-8 2.25-13 3.25S2 11.5 2 13.5s1.75 3.75 1.75 3.75C7 8 17 8 17 8z"/></svg></div>
-            <h3>Sustainability</h3>
-            <p>Environmental and economic responsibility</p>
+            <h3>Build What Works</h3>
+            <p>We design and deliver practical solutions that work reliably in real-world conditions.</p>
           </div>
           <div class="value-card farmer">
             <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg></div>
-            <h3>Farmer-Centric</h3>
-            <p>Solutions designed with farmer needs in mind</p>
+            <h3>Put Customers First</h3>
+            <p>We listen to our customers and build services they trust, use, and are willing to pay for.</p>
+          </div>
+          <div class="value-card sustainability">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M17 8C8 10 5.9 16.17 3.82 21.34l1.89.66l.95-2.3c.48.17.98.3 1.34.3C19 20 22 3 22 3c-1 2-8 2.25-13 3.25S2 11.5 2 13.5s1.75 3.75 1.75 3.75C7 8 17 8 17 8z"/></svg></div>
+            <h3>Learn and Improve</h3>
+            <p>We learn by doing, use feedback and data, and continuously improve our systems.</p>
           </div>
           <div class="value-card impact">
             <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/></svg></div>
-            <h3>Impact</h3>
-            <p>Measurable improvement in farmer livelihoods</p>
-          </div>
-          <div class="value-card integrity">
-            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"/></svg></div>
-            <h3>Integrity</h3>
-            <p>Transparent and ethical business practices</p>
+            <h3>Take Ownership</h3>
+            <p>We stand behind what we build, take responsibility for results, and think long term.</p>
           </div>
         </div>
       </div>
